force-app/main/default/objects/Object1__c/Object1__c.object-meta.xml
<CustomObject>
    <label>Object1</label>
    <nameField>
        <label>Object1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>