force-app/main/default/objects/Object1__c/fields/TextField1__c.field-meta.xml
<CustomField>
    <fullName>TextField1__c</fullName>
    <label>TextField1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>