force-app/main/default/objects/Object1__c/fields/TextField2__c.field-meta.xml
<CustomField>
    <fullName>TextField2__c</fullName>
    <label>TextField2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>