force-app/main/default/objects/Object1__c/fields/TextField3__c.field-meta.xml
<CustomField>
    <fullName>TextField3__c</fullName>
    <label>TextField3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>